--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <h1>Money Matters.</h1>
             <nav class="top">
                 <a href="index.html">Home</a>
-                <a href="">Tools</a>
+                <a href="tools.html">Tools</a>
                 <a href="">About Us</a>
                 <a href="" class="block-link">Join Us!</a>
             </nav>
