Added get connected to the tools page

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <p>Money Matters.</p>
             <nav>
                 <a href="">Home</a>
-                <a href="">Financial Calculators</a>
+                <a href="">Financial Tools</a>
                 <a href="">About Us</a>
             </nav>
             <div class="social-media">
