--- a/tools.html
+++ b/tools.html
@@ -78,8 +78,51 @@
                     <a href="">Download</a>
                 </div>
             </section>
+
+            <section class="section4">
+                <h2>Get Connected</h2>
+                <div class="connection-container">
+                    <div>
+                        <a href="">
+                        <img src="" alt="">
+                        <h3>Join the Community and Get Plugged In</h3>
+                        <p>DISCORD LINK</p>
+                        </a>
+                    </div>
+
+                    <div>
+                        <a href="">
+                            <img src="" alt="">
+                            <h3>Enter Your Email</h3>
+                            <p>Please submit the google form to receive other valuable insights.</p>
+                        </a>
+                    </div>
+                </div>
+            </section>
+
         </main>
-        <footer></footer>
+
+    </body>
+
+</html>
+        </main>
+        <footer>
+            <p>Money Matters.</p>
+            <nav>
+                <a href="">Home</a>
+                <a href="">Financial Tools</a>
+                <a href="">About Us</a>
+            </nav>
+            <div class="social-media">
+                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="" alt=""></a>
+                <a href=""><img src="" alt=""></a>
+            </div>
+
+            <div class="credits">
+                <p>&copy; 2025 <a href="">Ambitious Marketing Solutions</a></p>
+            </div>
+        </footer>
     </body>
 
 </html>
