Almost done landing page and the tools page

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <section class="section1">
                 <img src="images/money_matters-tree.png" alt="Light green money tree">
                 <p class="onep1">Learn when, where, why & how to use money effectively.</p>
-                <a href="">Find the right tool for you</a>
+                <a href="">Get Connected!</a>
                 <p class="onep2">Take control of your finances with our easy-to-use financial calculator. Whether you're planning a budget, calculating loan payments, or estimating future savings, this tool helps you make smarter money decisions with confidence and clarity.</p>
             </section>
 
@@ -74,7 +74,7 @@
                 <div class="tools-container">
                     <div>
                         <a href="">
-                        <img src="" alt="">
+                        <img src="images/budgeticon.png" alt="Budgeting">
                         <h3>Basic Budget Tool</h3>
                         <p>Body text for whatever you’d like to add more to the subheading.</p>
                         </a>
@@ -82,7 +82,7 @@
 
                     <div>
                         <a href="">
-                        <img src="" alt="">
+                        <img src="images/retirementicon.png" alt="Retirement">
                         <h3>Retirement Planning Tool</h3>
                         <p>Body text for whatever you’d like to add more to the subheading.</p>
                         </a>
@@ -90,7 +90,7 @@
 
                     <div>
                         <a href="">
-                        <img src="" alt="">
+                        <img src="images/investmenticon.png" alt="Investing">
                         <h3>Investment Management Tool</h3>
                         <p>Body text for whatever you’d like to add more to the subheading.</p>
                         </a>
@@ -101,7 +101,7 @@
 
             <section class="section3">
                 <h2>Helpful Resources</h2>
-                <img src="images/money_matters-tree-cropped.png" alt="Light green money tree">
+                <!--Might put an image-->
                 <div class="section3-split">
                     <div class="links-container">
                         <div>
