--- a/tools.html
+++ b/tools.html
@@ -1,7 +1,7 @@
 <html>
 
     <head>
-        <title>Money Matters.</title>
+        <title>Financial Tools</title>
         <meta charset="UTF-8">
         <meta name="description" content="Financial Calculators">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,13 +26,13 @@
             <section class="section1">
                 <img src="images/money_matters-piggybank.png" alt="Piggy Bank image">
                 <h1>Financial Tools.</h1>
-                <p></p>
+                <p>Add a brief but engaging description of the tools akjd;kfajh;kasdj;aslkj;asldjfa;fkjas;dlkja;sfjas;dlkfj;alkfja;dlkfj;asdlkdkasjdflkjsdfkjhsdflkhjasldvkbasdlkfjalkfjsalkdfjaslkfalkfbasdlvkalkjbasdvkasjdvnalskgbjasdkjfnawe;fjwefljFD;Lajdf;asjfhasldkjf</p>
             </section>
 
             <section class="section2">
                 <h2>Free Tools</h2>
                 <div class="tools">
-                    <div>
+                    <div class="tools-content">
                         <div>
                             <h3>Budget Tool</h3>
                             <p></p>
@@ -43,7 +43,7 @@
                 </div>
 
                 <div class="tools">
-                    <div>
+                    <div class="tools-content">
                         <div>
                             <h3>Retirement Planning Tool</h3>
                             <p></p>
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="tools">
-                    <div>
+                    <div class="tools-content">
                         <div>
                             <h3>Investment Management Tool</h3>
                             <p></p>
@@ -65,10 +65,10 @@
                 </div>
             </section>
 
-            <section>
+            <section class="section3">
                 <h2>Advanced Tools</h2>
                 <div class="tools">
-                    <div>
+                    <div class="tools-content">
                         <div>
                             <h3>Budget Tool</h3>
                             <p></p>
