completed buttons on tool page

--- a/tools.html
+++ b/tools.html
@@ -70,7 +70,7 @@
                 <div class="tools">
                     <div class="tools-content">
                         <div>
-                            <h3>Budget Tool</h3>
+                            <h3>Advanced Budget Tool</h3>
                             <p></p>
                         </div>
                         <img src="" alt="">
