completed majority of all the pages

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,16 +1,15 @@
 <html>
 
     <head>
-        <title>Financial Tools</title>
+        <title>About Us</title>
         <meta charset="UTF-8">
-        <meta name="description" content="Financial Calculators">
+        <meta name="description" content="About Money Matters">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="scss/tools_styling.css">
+        <link rel="stylesheet" href="scss/about-us-styling.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     </head>
-
 
     <body>
         <header>
@@ -24,62 +23,37 @@
         </header>
         <main>
             <section class="section1">
-                <img src="images/money_matters-piggybank.png" alt="Piggy Bank image">
-                <h1>Financial Tools.</h1>
+                <h1>About Us.</h1>
+
+                <h2>Who we are</h2>
                 <p>Add a brief but engaging description of the tools lkaskjdfhaklsjdf</p>
             </section>
 
             <section class="section2">
-                <h2>Free Tools</h2>
-                <div class="tools">
-                    <div class="tools-content">
-                        <div>
-                            <h3>Budget Tool</h3>
-                            <p></p>
-                        </div>
-                        <img src="" alt="">
+                    <div>
+                        <img src="images/money_matters-babyplant.png" alt="Baby Money Plant">
                     </div>
-                    <a href="">Download</a>
-                </div>
-
-                <div class="tools">
-                    <div class="tools-content">
-                        <div>
-                            <h3>Retirement Planning Tool</h3>
-                            <p></p>
-                        </div>
-                        <img src="" alt="">
+                    <div>
+                        <h2>Mission</h2>
+                        <p></p>
                     </div>
-                    <a href="">Download</a>
-                </div>
-
-                <div class="tools">
-                    <div class="tools-content">
-                        <div>
-                            <h3>Investment Management Tool</h3>
-                            <p></p>
-                        </div>
-                        <img src="" alt="">
+                    <div>
+                        <h2>Vision</h2>
+                        <p></p>
                     </div>
-                    <a href="">Download</a>
-                </div>
+                    <div>
+                        <img src="images/greenrocket.jpeg" alt="Light Green Rocket">
+                    </div>
+                    <div>
+                        <img src="images/money_matters-tree.png" alt="Light Green Money Tree">
+                    </div>
+                    <div>
+                        <h2>Values</h2>
+                        <p></p>
+                    </div>
             </section>
 
             <section class="section3">
-                <h2>Advanced Tools</h2>
-                <div class="tools">
-                    <div class="tools-content">
-                        <div>
-                            <h3>Advanced Budget Tool</h3>
-                            <p></p>
-                        </div>
-                        <img src="" alt="">
-                    </div>
-                    <a href="">Download</a>
-                </div>
-            </section>
-
-            <section class="section4">
                 <h2>Get Connected</h2>
                 <div class="connection-container">
                     <div>
@@ -99,12 +73,6 @@
                     </div>
                 </div>
             </section>
-
-        </main>
-
-    </body>
-
-</html>
         </main>
         <footer>
             <p>Money Matters.</p>
