--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <nav class="top">
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
-                <a href="">About Us</a>
+                <a href="aboutus.html">About Us</a>
                 <a href="" class="block-link">Join Us!</a>
             </nav>
         </header>
@@ -165,7 +165,7 @@
             </div>
 
             <div class="credits">
-                <p>&copy; 2025 <a href="">Ambitious Marketing Solutions</a></p>
+                <p>&copy; 2025 <a href="https://ambitiousmarketingsolutions.com/">Ambitious Marketing Solutions</a></p>
             </div>
         </footer>
 
