added blog link and almost completed landing page

--- a/aboutus.html
+++ b/aboutus.html
@@ -80,6 +80,7 @@
                 <a href="">Home</a>
                 <a href="">Financial Tools</a>
                 <a href="">About Us</a>
+                <a href="">Blogs</a>
             </nav>
             <div class="social-media">
                 <a href=""><img src="" alt=""></a>
