Completed most of my part on website

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,4 @@
 <html>
-
     <head>
         <title>About Us</title>
         <meta charset="UTF-8">
@@ -18,6 +17,7 @@
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
+                <a href="">Blogs</a>
                 <a href="" class="block-link">Join Us!</a>
             </nav>
         </header>
