fixed tools page image

--- a/tools.html
+++ b/tools.html
@@ -19,7 +19,7 @@
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
-                <a href="">Blogs</a>
+                <a href="" class="blog-link">Blogs</a>
                 <a href="" class="block-link">Join Us!</a>
             </nav>
         </header>
