added basic budget calculator and added bottom border
Needed bottom border on each tool to put a line below it

--- a/tools.html
+++ b/tools.html
@@ -38,7 +38,7 @@
                             <h3>Budget Tool</h3>
                             <p></p>
                         </div>
-                        <img src="" alt="">
+                        <img src="images/basicbudget-toolsc.png" alt="Basic Budget Excel Finance Tool">
                     </div>
                     <a href="">Download</a>
                 </div>
