added pictures and text for most, and revamped about us page

--- a/aboutus.html
+++ b/aboutus.html
@@ -24,33 +24,32 @@
         <main>
             <section class="section1">
                 <h1>About Us.</h1>
-
-                <h2>Who we are</h2>
-                <p>Add a brief but engaging description of the tools lkaskjdfhaklsjdf</p>
             </section>
 
             <section class="section2">
+            
+                <img src="images/money_matters-tree.png" alt="Money Tree">
+
+                <div class="content">
+
                     <div>
-                        <img src="images/money_matters-babyplant.png" alt="Baby Money Plant">
+                        <h2>Who we are</h2>
+                        <p>Add a brief but engaging description of the tools lkaskjdfhaklsjdf</p>
                     </div>
+
                     <div>
                         <h2>Mission</h2>
-                        <p></p>
+                        <p>sad;lfjhasdlkfja;sldkjfa'ld;kja;lsdkfj;aldskvja;lfkja;sdlfkdsf;asdlkfja;sdlkfja;sldkfja;lsdkfj;alkefj;alskdfj;asldkflaksjdf<p>
                     </div>
                     <div>
                         <h2>Vision</h2>
-                        <p></p>
-                    </div>
-                    <div>
-                        <img src="images/greenrocket.jpeg" alt="Light Green Rocket">
-                    </div>
-                    <div>
-                        <img src="images/money_matters-tree.png" alt="Light Green Money Tree">
+                        <p>a;dkfjnasdkjfnasdkjfnadskjnaer;kjfna;sddfkmsflhk'adsfk'asdkfj;skf.jdlg;alsdkj;asld;ekjna;sldkjvldkfjg;dsflkjga;sldjfakfjna;skdjfasdf</p>
                     </div>
                     <div>
                         <h2>Values</h2>
-                        <p></p>
+                        <p>lasjdkflakjdfhaklsdjha;kdfjhasldkjfbafd;lkgslfgk;asdjlfk;adf;ljsnv,/mfd'gkasd;lkfnasd;fknadf'gklsd"LfkSaldkfbasldkfjbasdlfkjasd</p>
                     </div>
+                </div>
             </section>
 
             <section class="section3">
