--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <section class="section1">
                 <img src="images/money_matters-tree.png" alt="Light green money tree">
                 <p class="onep1">Learn when, where, why & how to use money effectively.</p>
-                <a href="">Get Connected!</a>
-                <p class="onep2">Take control of your finances with our easy-to-use financial calculator. Whether you're planning a budget, calculating loan payments, or estimating future savings, this tool helps you make smarter money decisions with confidence and clarity.</p>
+                <a href="aboutus.html">Start Here!</a>
+                <p class="onep2">This site was started by two college friends who believe access to helpful financial tools should be FREE and easy to use for EVERYONE. <br> <br> Download our simple tools & learn more about your finances with strategies to improve them. 15 minutes, a lifetime of value.</p>
             </section>
 
             <section class="section2">
@@ -77,7 +77,7 @@
                         <a href="">
                         <img src="images/budgeticon.png" alt="Budgeting">
                         <h3>Basic Budget Tool</h3>
-                        <p>Body text for whatever you’d like to add more to the subheading.</p>
+                        <p>Do you know how you spend your money?</p>
                         </a>
                     </div>
 
@@ -85,7 +85,7 @@
                         <a href="">
                         <img src="images/retirementicon.png" alt="Retirement">
                         <h3>Retirement Planning Tool</h3>
-                        <p>Body text for whatever you’d like to add more to the subheading.</p>
+                        <p>Are you on track to retire comfortably?</p>
                         </a>
                     </div>
 
@@ -93,7 +93,7 @@
                         <a href="">
                         <img src="images/investmenticon.png" alt="Investing">
                         <h3>Investment Management Tool</h3>
-                        <p>Body text for whatever you’d like to add more to the subheading.</p>
+                        <p>Do your investment strategies match your goals?</p>
                         </a>
                     </div>
                 </div>
@@ -106,12 +106,12 @@
                 <div class="section3-split">
                     <div class="links-container">
                         <div>
-                            <h3>What is Financial Planning</h3>
+                            <h3>What is Financial Planning?</h3>
                             <a href="https://www.youtube.com/watch?v=pd29VYF6e-U">
                                 https://www.youtube.com/watch?v=pd29VYF6e-U</a>
                         </div>
                         <div>
-                            <h3>SEC Planning Tools</h3>
+                            <h3>SEC Guidance</h3>
                             <a href="https://www.investor.gov/free-financial-planning-tools">https://www.investor.gov/free-financial-planning-tools</a>
                         </div>
                         <div>
@@ -132,7 +132,7 @@
                     <div>
                         <a href="">
                         <img src="" alt="">
-                        <h3>Join the Community and Get Plugged In</h3>
+                        <h3>Join the Community & Get Plugged In</h3>
                         <p>DISCORD LINK</p>
                         </a>
                     </div>
