--- a/tools.html
+++ b/tools.html
@@ -27,7 +27,8 @@
             <section class="section1">
                 <img src="images/money_matters-piggybank.png" alt="Piggy Bank image">
                 <h1>Financial Tools.</h1>
-                <p>Add a brief but engaging description of the tools lkaskjdfhaklsjdf</p>
+                <p>You’re in the right spot!
+                    Below are simple, effective & dynamic tools that provide insights into your financial well being. It’s fast to tell if you’re on track with your spending, savings & investing goals.</p>
             </section>
 
             <section class="section2">
@@ -35,34 +36,35 @@
                 <div class="tools">
                     <div class="tools-content">
                         <div>
-                            <h3>Budget Tool</h3>
-                            <p></p>
+                            <h3>Basic Budget Tool</h3>
+                            <p>The basic budgeting tool is the best place to start for simple financial guidance. Visualize WHERE your money is spent relative to HOW it should be spent.
+                                <a href="">Explanation Video</a></p>
                         </div>
-                        <img src="images/basicbudget-toolsc.png" alt="Basic Budget Excel Finance Tool">
+                        <img src="images/basic-budget-tool-ss.png" alt="Basic Budget Excel Finance Tool">
                     </div>
-                    <a href="">Download</a>
+                    <a href="" class="download-button">Download</a>
                 </div>
 
                 <div class="tools">
                     <div class="tools-content">
                         <div>
                             <h3>Retirement Planning Tool</h3>
-                            <p></p>
+                            <p>The cost to retire “comfortably” is getting higher & higher. With this tool, monitor your progress towards financial stability. <a href="">Explanation Video</a></p>
                         </div>
                         <img src="" alt="">
                     </div>
-                    <a href="">Download</a>
+                    <a href="" class="download-button">Download</a>
                 </div>
 
                 <div class="tools">
                     <div class="tools-content">
                         <div>
                             <h3>Investment Management Tool</h3>
-                            <p></p>
+                            <p>The “secret” to building wealth is save often and invest responsibly. Analyze how your investment strategies compares to your long term goals. <a href="">Explanation Video</a></p>
                         </div>
                         <img src="" alt="">
                     </div>
-                    <a href="">Download</a>
+                    <a href="" class="download-button">Download</a>
                 </div>
             </section>
 
@@ -72,11 +74,11 @@
                     <div class="tools-content">
                         <div>
                             <h3>Advanced Budget Tool</h3>
-                            <p></p>
+                            <p>This tool is for people who want in-depth analysis of their annual spending patterns. At just $50, this tool pays for itself when used correctly to point out spending patterns and to optimize the way we use our money. <a href="">Explanation Video</a></p>
                         </div>
-                        <img src="" alt="">
+                        <img src="images/advanced-budget-tool-ss.png" alt="Advanced Budget Excel Tool">
                     </div>
-                    <a href="">Download</a>
+                    <a href="" class="download-button">Download</a>
                 </div>
             </section>
 
