adjusted popular tools section

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <main>
             <section class="section1">
                 <img src="images/money_matters-tree.png" alt="Light green money tree">
-                <p class="onep1">Learn when, where, why & how to use money effectively.</p>
+                <p class="onep1">Learn how to use your money effectively.</p>
                 <a href="aboutus.html">Start Here!</a>
                 <p class="onep2">This site was started by two college friends who believe access to helpful financial tools should be FREE and easy to use for EVERYONE. <br> <br> Download our simple tools & learn more about your finances with strategies to improve them. 15 minutes, a lifetime of value.</p>
             </section>
