fixed tools page and about us page slightly

--- a/aboutus.html
+++ b/aboutus.html
@@ -28,26 +28,26 @@
 
             <section class="section2">
             
-                <img src="images/money_matters-tree.png" alt="Money Tree">
+                <img src="images/money_matters-babyplant.png" alt="Money Baby plant">
 
                 <div class="content">
 
                     <div>
                         <h2>Who we are</h2>
-                        <p>Add a brief but engaging description of the tools lkaskjdfhaklsjdf</p>
+                        <p>Two college friends from Philly with a mutual passion for entrepreneurship & finance. We have diverse backgrounds from Professional Sports to Investment Banking.</p>
                     </div>
 
-                    <div>
+                    <div class="left">
                         <h2>Mission</h2>
-                        <p>sad;lfjhasdlkfja;sldkjfa'ld;kja;lsdkfj;aldskvja;lfkja;sdlfkdsf;asdlkfja;sdlkfja;sldkfja;lsdkfj;alkefj;alskdfj;asldkflaksjdf<p>
+                        <p>Personal finance doesn’t need to be complicated. The first step is learning about your situation! We aim to give EVERYONE access to FREE tools as the first step to improving their financial health.<p>
                     </div>
-                    <div>
+                    <div class="right">
                         <h2>Vision</h2>
-                        <p>a;dkfjnasdkjfnasdkjfnadskjnaer;kjfna;sddfkmsflhk'adsfk'asdkfj;skf.jdlg;alsdkj;asld;ekjna;sldkjvldkfjg;dsflkjga;sldjfakfjna;skdjfasdf</p>
+                        <p>Educate, connect & improve! Our long term plan is to grow a community of like-minded people who share & learn from one another experiences.</p>
                     </div>
-                    <div>
+                    <div class="left">
                         <h2>Values</h2>
-                        <p>lasjdkflakjdfhaklsdjha;kdfjhasldkjfbafd;lkgslfgk;asdjlfk;adf;ljsnv,/mfd'gkasd;lkfnasd;fknadf'gklsd"LfkSaldkfbasldkfjbasdlfkjasd</p>
+                        <p>No b.s., just a place to start getting back on track with your financial health. Simple, real & attainable solutions for EVERYONE.</p>
                     </div>
                 </div>
             </section>
@@ -57,7 +57,7 @@
                 <div class="connection-container">
                     <div>
                         <a href="">
-                        <img src="" alt="">
+                        <img src="images/moneymatters-logo.png" alt="">
                         <h3>Join the Community and Get Plugged In</h3>
                         <p>DISCORD LINK</p>
                         </a>
