--- a/tools.html
+++ b/tools.html
@@ -87,7 +87,7 @@
                 <div class="connection-container">
                     <div>
                         <a href="">
-                        <img src="" alt="">
+                        <img src="images/moneymatters-logo.png" alt="">
                         <h3>Join the Community and Get Plugged In</h3>
                         <p>DISCORD LINK</p>
                         </a>
