--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="connection-container">
                     <div>
                         <a href="">
-                        <img src="" alt="">
+                        <img src="images/moneymatters-logo.png" alt="">
                         <h3>Join the Community & Get Plugged In</h3>
                         <p>DISCORD LINK</p>
                         </a>
@@ -155,9 +155,9 @@
         <footer>
             <p>Money Matters.</p>
             <nav>
-                <a href="">Home</a>
-                <a href="">Financial Tools</a>
-                <a href="">About Us</a>
+                <a href="index.html">Home</a>
+                <a href="tools.html">Financial Tools</a>
+                <a href="aboutus.html">About Us</a>
                 <a href="">Blogs</a>
             </nav>
             <div class="social-media">
