fixed navigation on all pages

--- a/tools.html
+++ b/tools.html
@@ -112,9 +112,9 @@
         <footer>
             <p>Money Matters.</p>
             <nav>
-                <a href="">Home</a>
-                <a href="">Financial Tools</a>
-                <a href="">About Us</a>
+                <a href="index.html">Home</a>
+                <a href="tools.html">Financial Tools</a>
+                <a href="aboutus.html">About Us</a>
                 <a href="">Blogs</a>
             </nav>
             <div class="social-media">
