almost done individual tools pages

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <h2>Popular Tools</h2>
                 <div class="tools-container">
                     <div>
-                        <a href="">
+                        <a href="individual-tools/basic-budget-tool.html">
                         <img src="images/budgeticon.png" alt="Budgeting">
                         <h3>Basic Budget Tool</h3>
                         <p>Do you know how you spend your money?</p>
