--- a/tools.html
+++ b/tools.html
@@ -42,7 +42,7 @@
                         </div>
                         <img src="images/basic-budget-tool-ss.png" alt="Basic Budget Excel Finance Tool">
                     </div>
-                    <a href="" class="download-button">Download</a>
+                    <a href="individual-tools/basic-budget-tool.html" class="download-button">Download</a>
                 </div>
 
                 <div class="tools">
