completed join us link

--- a/individual-tools/basic-budget-tool.html
+++ b/individual-tools/basic-budget-tool.html
@@ -14,11 +14,11 @@
         <header>
             <p>Money Matters.</p>
             <nav class="top">
-                <a href="index.html">Home</a>
-                <a href="tools.html">Tools</a>
-                <a href="aboutus.html">About Us</a>
+                <a href="../index.html">Home</a>
+                <a href="../tools.html">Tools</a>
+                <a href="../aboutus.html">About Us</a>
                 <a href="" class="blog-link">Blogs</a>
-                <a href="" class="block-link">Join Us!</a>
+                <a href="#join-us" class="block-link">Join Us!</a>
             </nav>
         </header>
         <main>
@@ -33,7 +33,7 @@
                 <a href="" class="download-button">Download</a>
             </section>
 
-            <section class="final">
+            <section class="final" id="join-us">
                 <h2>Get Connected</h2>
                 <div class="connection-container">
                     <div>
