--- a/tools.html
+++ b/tools.html
@@ -20,7 +20,7 @@
                 <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
                 <a href="" class="blog-link">Blogs</a>
-                <a href="" class="block-link">Join Us!</a>
+                <a href="#join-us" class="block-link">Join Us!</a>
             </nav>
         </header>
         <main>
@@ -82,7 +82,7 @@
                 </div>
             </section>
 
-            <section class="section4">
+            <section class="section4" id="join-us">
                 <h2>Get Connected</h2>
                 <div class="connection-container">
                     <div>
