--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
                 <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
                 <a href="" class="blog-link">Blogs</a>
-                <a href="" class="block-link">Join Us!</a>
+                <a href="#join-us" class="block-link">Join Us!</a>
             </nav>
         </header>
         <main>
@@ -52,7 +52,7 @@
                 </div>
             </section>
 
-            <section class="section3">
+            <section class="section3" id="join-us">
                 <h2>Get Connected</h2>
                 <div class="connection-container">
                     <div>
