half of changes on list done

--- a/index.html
+++ b/index.html
@@ -50,15 +50,17 @@
 
     <body>
         <header>
-            <p>Money Matters.</p>
+            <a href="index.html"><p>Money Matters.</p></a>
             <img src="images/money_mattershandshake-cropped.png" alt="Handshake cartoon">
             <h1>Money Matters.</h1>
             <nav class="top">
-                <a href="index.html">Home</a>
-                <a href="tools.html">Tools</a>
-                <a href="aboutus.html">About Us</a>
-                <a href="" class="blog-link">Blogs</a>
-                <a href="#join-us" class="block-link">Join Us!</a>
+                <div class="box">
+                    <a href="index.html">Home</a>
+                    <a href="tools.html">Tools</a>
+                    <a href="aboutus.html">About Us</a>
+                    <a href="" class="blog-link">Blogs</a>
+                </div>
+                <a href="#join-us" class="block-link">Get Connected!</a>
             </nav>
         </header>
 
@@ -67,11 +69,11 @@
                 <img src="images/money_matters-tree.png" alt="Light green money tree">
                 <p class="onep1">Learn how to use your money effectively.</p>
                 <a href="aboutus.html">Start Here!</a>
-                <p class="onep2">This site was started by two college friends who believe access to helpful financial tools should be FREE and easy to use for EVERYONE. <br> <br> Download our simple tools & learn more about your finances with strategies to improve them. 15 minutes, a lifetime of value.</p>
+                <p class="onep2">This site was started by two college friends who believe access to powerful financial tools should be FREE and easy to use for EVERYONE. <br> <br> Download our simple tools & learn more about your finances along with strategies to improve them. 15 minutes, a lifetime of value.</p>
             </section>
 
             <section class="section2">
-                <h2>Popular Tools</h2>
+                <h2><a href="tools.html">Popular Tools</a></h2>
                 <div class="tools-container">
                     <div>
                         <a href="individual-tools/basic-tools/basic-budget-tool.html">
@@ -156,7 +158,7 @@
             <p>Money Matters.</p>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="tools.html">Financial Tools</a>
+                <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
                 <a href="">Blogs</a>
             </nav>
