--- a/tools.html
+++ b/tools.html
@@ -14,13 +14,13 @@
 
     <body>
         <header>
-            <p>Money Matters.</p>
+            <a href="index.html"><p>Money Matters.</p></a>
             <nav class="top">
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
                 <a href="" class="blog-link">Blogs</a>
-                <a href="#join-us" class="block-link">Join Us!</a>
+                <a href="#join-us" class="block-link">Get Connected!</a>
             </nav>
         </header>
         <main>
@@ -113,7 +113,7 @@
             <p>Money Matters.</p>
             <nav>
                 <a href="index.html">Home</a>
-                <a href="tools.html">Financial Tools</a>
+                <a href="tools.html">Tools</a>
                 <a href="aboutus.html">About Us</a>
                 <a href="">Blogs</a>
             </nav>
