--- a/individual-tools/basic-tools/basic-budget-tool.html
+++ b/individual-tools/basic-tools/basic-budget-tool.html
@@ -12,13 +12,13 @@
 
     <body>
         <header>
-            <p>Money Matters.</p>
+            <a href="../../index.html"><p>Money Matters.</p></a>
             <nav class="top">
                 <a href="../../index.html">Home</a>
                 <a href="../../tools.html">Tools</a>
                 <a href="../../aboutus.html">About Us</a>
                 <a href="" class="blog-link">Blogs</a>
-                <a href="#join-us" class="block-link">Join Us!</a>
+                <a href="#join-us" class="block-link">Get Connected!</a>
             </nav>
         </header>
         <main>
@@ -59,7 +59,7 @@
             <p>Money Matters.</p>
             <nav>
                 <a href="../../index.html">Home</a>
-                <a href="../../tools.html">Financial Tools</a>
+                <a href="../../tools.html">Tools</a>
                 <a href="../../aboutus.html">About Us</a>
                 <a href="">Blogs</a>
             </nav>
