changed money matters. to moneymatters.

--- a/aboutus.html
+++ b/aboutus.html
@@ -12,7 +12,7 @@
 
     <body>
         <header>
-            <a href="index.html"><p>Money Matters.</p></a>
+            <a href="index.html"><p>MoneyMatters.</p></a>
             <nav class="top">
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
@@ -74,7 +74,7 @@
             </section>
         </main>
         <footer>
-            <p>Money Matters.</p>
+            <p>MoneyMatters.</p>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
