--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
     <body>
         <header>
-            <a href="index.html"><p>Money Matters.</p></a>
+            <a href="index.html"><p>MoneyMatters.</p></a>
             <img src="images/money_mattershandshake-cropped.png" alt="Handshake cartoon">
-            <h1>Money Matters.</h1>
+            <h1>MoneyMatters.</h1>
             <nav class="top">
                 <div class="box">
                     <a href="index.html">Home</a>
@@ -155,7 +155,7 @@
         </main>
 
         <footer>
-            <p>Money Matters.</p>
+            <p>MoneyMatters.</p>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="tools.html">Tools</a>
