--- a/individual-tools/advanced-tools/advanced-budget-tool.html
+++ b/individual-tools/advanced-tools/advanced-budget-tool.html
@@ -12,7 +12,7 @@
 
     <body>
         <header>
-            <a href="../../index.html"><p>Money Matters.</p></a>
+            <a href="../../index.html"><p>MoneyMatters.</p></a>
             <nav class="top">
                 <a href="../../index.html">Home</a>
                 <a href="../../tools.html">Tools</a>
@@ -56,7 +56,7 @@
         </main>
 
         <footer>
-            <p>Money Matters.</p>
+            <p>MoneyMatters.</p>
             <nav>
                 <a href="../../index.html">Home</a>
                 <a href="../../tools.html">Tools</a>
