--- a/tools.html
+++ b/tools.html
@@ -32,7 +32,7 @@
             </section>
 
             <section class="section2">
-                <h2>Free Tools</h2>
+                <h2>Tools</h2>
                 <div class="tools">
                     <div class="tools-content">
                         <div>
